@@ -1,3 +1,10 @@
+2008-03-02  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_shadow):
+	Override the entry state early enough so that the params are set
+	correctly.
+
 2008-03-01  Thomas Wood  <thos@gnome.org>
 
 	* engines/crux/src/crux-draw.c: (paint_button), (draw_box): Only draw an
